# cmp-dictionary-nanny

./: .gitignore  README.md  download.sh  install.sh
after/plugin/: cmp-dictionary-nanny.lua  cmp-lang-nanny.lua
doc/: cmp-dictionary-nanny.txt  tags
lua/cmp-dictionary-nanny/: config.lua  download.lua  init.lua  notify.lua  source.lua  utils.lua
lua/cmp-lang-nanny/: init.lua  source.lua
server/: CMakeLists.txt  base.cpp  database.cpp  database.hpp  dict_server.cpp  dict_server.hpp
server/.cache/clangd/index/: allocator.h.4835AFF70EA95191.idx  config.h.6D6B69AE75344CDB.idx  database.cpp.21D65F050D832C9C.idx  database.hpp.165979E26C8FA6FC.idx  dict_server.cpp.EDFA43FDC346BD46.idx  dict_server.hpp.9F291B8CE2DD5BDB.idx  forwards.h.E4988FB48BC1F3C3.idx  json.h.46FADCBAC7A04CD5.idx  json_features.h.0792D6C75C6EDC9B.idx  reader.h.E48AB20EE9DE7D64.idx  test_DataBase.cpp.E1A055C31E42493C.idx  value.h.CD377F718957B2B9.idx  version.h.46F711EF26954F53.idx  writer.h.1E24641D80674091.idx
server/jsoncpp/: jsoncpp.cpp
server/jsoncpp/json/: json-forwards.h  json.h
server/test/: connect_sqlite.cpp  test_DataBase.cpp  test_jsoncpp.cpp
speak/: package.json  say.js
